--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
   }
